# AudioCuePro

AudioCuePro/: CMakeLists.txt  livemodewindow.cpp  livemodewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  sfxlibrarywidget.cpp  sfxlibrarywidget.h  spotifyauthmanager.cpp  spotifyauthmanager.h  spotifyclient.cpp  spotifyclient.h  spotifymodule.cpp  spotifymodule.h  trackwidget.cpp  trackwidget.h  waveformview.cpp  waveformview.h
